kubernetes/overlays/production-recruiting-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recruiting-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recruiting-frontend
  template:
    metadata:
      labels:
        app: recruiting-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: recruiting-frontend
          image: ghcr.io/${github_repository}:${image_tag}
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: recruiting-frontend
spec:
  selector:
    app: recruiting-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
