kubernetes/overlays/production-recruiting-frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: 'prod-issuer'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - recruitingtests.com
      secretName: frontend-recruitingtests-com-tls
  rules:
    - host: recruitingtests.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: recruiting-frontend
                port:
                  number: 80
